change for dezhao

--- a/lib/less/index.less
+++ b/lib/less/index.less
@@ -6,10 +6,6 @@
   width:320px; height:6rem; border:2px solid red;
 }
 .scroll-wrap,.scroll-view{ box-sizing: border-box;}
-.scroll-wrap{  height:1960px; min-height:960px; }
+.scroll-wrap{  height:1960px; min-height:960px; } 
 
-#content { width:640px; font-size:24px; }
-[data-dpr="1"] #content{ width:320px; font-size:12px; }
-[data-dpr="2"] #content{ width:320px*2; font-size:12px*2; }
-[data-dpr="3"] #content{ width:320px*3; font-size:12px*3; }
-#content .item{ background-color:#ccc; width:50%; height:400px; }
+#content .item{ background-color:#ccc; width:50%; height:20rem; }
